fixed modal issue from not showing

--- a/src/components/edit-menu/edit-menu.scss
+++ b/src/components/edit-menu/edit-menu.scss
@@ -15,3 +15,7 @@ header {
   color: lighten(gray,36%);
   margin-bottom: 36px;
 }
+
+#edit-menu-container {
+  border:1px solid black;
+}
